# basicStructureC

./: CMakeLists.txt  README.md
CodeDev/: CMakeLists.txt
CodeDev/cmake/: documentation.cmake  headers.cmake  sources.cmake
CodeDev/include/: firsttask.h  something00.h
CodeDev/src/: firsttask.cpp  something00.cpp
ExecDev/: CMakeLists.txt  main.cpp
